exercicios cap 19 atualizados

--- a/Exercicios/ex026/fundo006.html
+++ b/Exercicios/ex026/fundo006.html
@@ -12,6 +12,13 @@
             background-position: center center;
             background-repeat: no-repeat;
             background-size: cover;
+            background-attachment: fixed;
+
+            /* Shorthand - background 
+            color > image > position > repeat >  attachment, o size não funciona*/
+
+            background: black url('imagens/wallpaper002.jpg') center center no-repeat fixed;
+            background-size: cover
         }
 
         main{
@@ -23,12 +30,17 @@
             border-radius: 15px;
         }
     </style>
-    <title>Document</title>
+    <title>Fundo fixo de tela</title>
 </head>
 <body>
     <main>
         <h1>Teste de imagem de fundo</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium perferendis officia rerum, et qui provident molestias voluptas quas illum ullam, sint eius. Explicabo aut accusamus quia veritatis reiciendis ullam quod? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel eaque dignissimos earum suscipit? Eum cum ipsa sapiente voluptatibus deleniti. Cupiditate qui praesentium quo incidunt laudantium laborum provident, hic necessitatibus facere.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam explicabo ullam aliquam repudiandae saepe amet? Incidunt quae, voluptatem impedit, ex eveniet facilis soluta placeat fugit quos, vel sapiente consequuntur corporis? Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi ratione, nesciunt magni dolorum voluptates fugiat similique exercitationem quae accusamus, mollitia est dolor ad ducimus nostrum excepturi deserunt laborum quod voluptate!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam explicabo ullam aliquam repudiandae saepe amet? Incidunt quae, voluptatem impedit, ex eveniet facilis soluta placeat fugit quos, vel sapiente consequuntur corporis? Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi ratione, nesciunt magni dolorum voluptates fugiat similique exercitationem quae accusamus, mollitia est dolor ad ducimus nostrum excepturi deserunt laborum quod voluptate!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam explicabo ullam aliquam repudiandae saepe amet? Incidunt quae, voluptatem impedit, ex eveniet facilis soluta placeat fugit quos, vel sapiente consequuntur corporis? Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi ratione, nesciunt magni dolorum voluptates fugiat similique exercitationem quae accusamus, mollitia est dolor ad ducimus nostrum excepturi deserunt laborum quod voluptate! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quod atque corporis accusantium aspernatur optio tenetur natus possimus impedit fuga totam hic fugit consectetur doloribus saepe est, iure cum dolorem quas.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam explicabo ullam aliquam repudiandae saepe amet? Incidunt quae, voluptatem impedit, ex eveniet facilis soluta placeat fugit quos, vel sapiente consequuntur corporis? Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi ratione, nesciunt magni dolorum voluptates fugiat similique exercitationem quae accusamus, mollitia est dolor ad ducimus nostrum excepturi deserunt laborum quod voluptate! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quod atque corporis accusantium aspernatur optio tenetur natus possimus impedit fuga totam hic fugit consectetur doloribus saepe est, iure cum dolorem quas.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam explicabo ullam aliquam repudiandae saepe amet? Incidunt quae, voluptatem impedit, ex eveniet facilis soluta placeat fugit quos, vel sapiente consequuntur corporis? Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi ratione, nesciunt magni dolorum voluptates fugiat similique exercitationem quae accusamus, mollitia est dolor ad ducimus nostrum excepturi deserunt laborum quod voluptate! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quod atque corporis accusantium aspernatur optio tenetur natus possimus impedit fuga totam hic fugit consectetur doloribus saepe est, iure cum dolorem quas.</p>
     </main>
 </body>
 </html>
