projeto cordel finalizado antes de assistir a resolução

--- a/Desafios/Desafio 12/cordel.html
+++ b/Desafios/Desafio 12/cordel.html
@@ -33,7 +33,7 @@
         </section>
         
         <section class="imagem" id="img1">
-            <p>
+            <p class="paraimg">
                 Não é mais como era antes
                 <br>
                 É tudo abreviado
@@ -85,7 +85,7 @@
         </section>
         
         <section class="imagem" id="img2">
-            <p>
+            <p class="paraimg">
                 Tenho saudade das cartas
                 <br>
                 Escritas com a própria mão
@@ -136,5 +136,9 @@
             </p>
         </section>
     </main>
+
+    <footer>
+        <p>Site criado por <a href="#">Gustavo Guanabara</a> para o <a href="#">CursoemVideo</a></p>
+    </footer>
 </body>
 </html>
