--- a/Desafios/Desafio 13/tabela002.html
+++ b/Desafios/Desafio 13/tabela002.html
@@ -14,6 +14,7 @@
         td{
             border: 0.6px solid black;
             text-align: center;
+            padding: 5px;
         }
     </style>
     <title>Desafio das tbaelas</title>
