navegação no iframe

--- a/Exercicios/ex029/paginas-extras/pag-loading.html
+++ b/Exercicios/ex029/paginas-extras/pag-loading.html
@@ -7,12 +7,13 @@
     <style>
         body{
             font-family: Arial, Helvetica, sans-serif;
-            background-color: lightcyan;
+            background-color: lightslategray;
+            text-align: center;
         }
     </style>
     <title>Site teste</title>
 </head>
 <body>
-    <h1>Primeira Página!</h1>
+    <h1>Escolha uma das opções a cima!</h1>
 </body>
 </html>
