--- a/Exercicios/ex029/paginas-extras/pag003.html
+++ b/Exercicios/ex029/paginas-extras/pag003.html
@@ -7,12 +7,12 @@
     <style>
         body{
             font-family: Arial, Helvetica, sans-serif;
-            background-color: lightcyan;
+            background-color: lightgreen;
         }
     </style>
     <title>Site teste</title>
 </head>
 <body>
-    <h1>Primeira Página!</h1>
+    <h1>Terceira Página</h1>
 </body>
 </html>
