atualizações projeto social

--- a/Desafios/Desafio 15/paginas/pagyoutube.html
+++ b/Desafios/Desafio 15/paginas/pagyoutube.html
@@ -8,6 +8,6 @@
     <title>PagHome</title>
 </head>
 <body>
-    <div><img src="../imagens/tela-home.jpg" alt="Home"></div>
+    <div><img src="../imagens/tela-youtube.png" alt="Home"></div>
 </body>
 </html>
