--- a/Desafios/Desafio 15/index.html
+++ b/Desafios/Desafio 15/index.html
@@ -9,12 +9,33 @@
     <title>Projeto Redes Sociais</title>
 </head>
 <body>
-    <main>
-        <section class="cell">
-        </section>
+    <main class="container">
+        <div class="cell">
+            <div><img src="imagens/frame-iphone.png" alt="cell"></div>
 
-        <section class="botoes">
-        </section>
+            <div class="screen">
+                <iframe src="" frameborder="0" name="home"></iframe>
+            </div>
+
+            <div class="screen outros">
+                <iframe src="" frameborder="0" name="youtube"></iframe>
+            </div>
+
+        </div>
+
+        <div class="nav">
+            <div class="link"><a href="paginas/paghome.html" target="home"><img src="imagens/logo-home.jpg" alt="home"></a></div>
+
+            <div class="link"><a href="imagens/tela-youtube.png" target="youtube"><img src="imagens/logo-youtube.jpg" alt="youtube"></a></div>
+
+            <div class="link"><a href="#"><img src="imagens/logo-github.jpg" alt="github"></a></div>
+
+            <div class="link"><a href="#"><img src="imagens/logo-instagram.jpg" alt="logo-instagram"></a></div>
+
+            <div class="link"><a href="#"><img src="imagens/logo-twitter.jpg" alt="twitter"></a></div>
+
+            <div class="link"><a href="#"><img src="imagens/logo-facebook.jpg" alt="logo-facebook"></a></div>
+        </div>
     </main>
 </body>
 </html>
